--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     
         <div class="register-link">
-            <p>Ainda não tem conta? <a href="#">Cadastrar</a></p>
+            <p class="paragrafo-1">Ainda não tem conta? <a class="a-href-1" href="#">Cadastrar</a></p>
         </div>
 
     </div>
