--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input class="inputs-type" type="email" placeholder="contato@gmail.com">
 
         <label class="label-text">Sua senha</label>
-        <input class="inputs-type" type="password" placeholder="contato@gmail.com">
+        <input class="inputs-type" type="password" placeholder="Informe sua senha">
 
         <div class="remember">
             <label><input type="checkbox"> Manter-me logado</label>
@@ -26,7 +26,6 @@
         <div class="register-link">
             <p class="paragrafo-1">Ainda não tem conta? <a class="a-href-1" href="#">Cadastrar</a></p>
         </div>
-
     </div>
 </body>
 </html>
