--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form>
     <div class="div-container">
-        <h1>LOGIN</h1>
+        <h1>BEM VINDO</h1>
         <br><br>
         <label class="label-text">Seu e-mail</label>
         <input class="inputs-type" type="email" placeholder="contato@gmail.com">
@@ -29,5 +30,6 @@
             <p class="paragrafo-1">Ainda não tem conta? <a class="a-href-1" href="#">Cadastrar</a></p>
         </div>
     </div>
+</form>
 </body>
 </html>
